--- a/config/database.yml
+++ b/config/database.yml
@@ -26,11 +26,11 @@ production:
 
 production:
   <<: *default
-  database: DMK
+  database: sampledb
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
   collation: utf8mb4_general_ci
   host: rds-mysql-server.cdashmnvjyxa.ap-northeast-1.rds.amazonaws.com
-  username: Revy
+  username: root
   password: bm413017
